# sambasportai-world-cup-2026

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  pyproject.toml
.github/workflows/: pages.yml
data/baseline/: v8_group_advancement.csv  v8_match_predictions.csv
data/processed/: group_stage_training_features.csv
docs/: OUTPUT_SAMPLES.md
models/v8/: model_metadata.json  v8_score_model.joblib
models/v9/: v9_outcome_model.joblib
notebooks/: 01_group_stage_error_analysis.ipynb  02_probability_calibration.ipynb  03_round32_scenario_explorer.ipynb  04_player_level_roster_update.ipynb  README.md
outputs/evaluation/: group_stage_evaluation_metrics.json
outputs/form/: team_form_after_group_stage.csv
sambasportai-world-cup-2026/: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
sambasportai-world-cup-2026/configs/: tournament_update.json
sambasportai-world-cup-2026/data/: README.md
sambasportai-world-cup-2026/docs/: GITHUB_SETUP.md  REPOSITORY_STRUCTURE.md
sambasportai-world-cup-2026/notebooks/: README.md
sambasportai-world-cup-2026/reports/: DATA_PROVENANCE.md  GROUP_STAGE_EVALUATION_AND_R32.md  MODEL_CARD_v8.md  MODEL_CARD_v9.md  REPRODUCIBILITY.md  cross_validation_results.csv  updated_model_cv_metrics.json
sambasportai-world-cup-2026/scripts/: evaluate_group_stage.py  predict_round32.py  train_tournament_update.py  (+1 more)
scripts/: build_tournament_features.py  run_pipeline.py
ui/: README.md  group_stage_matchday_2.html  group_stage_review_and_round32_predictions.html  index.html  pre_tournament_prediction_center.html
(+25 files in other folders)
