[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sambasportai-world-cup-2026"
version = "0.9.0"
description = "Roster-aware and tournament-updated FIFA World Cup 2026 forecasting pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Abel A. Reyes-Angulo"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
